added swiper-pagination style in general

--- a/themes/zephyr/front-end/src/components/component-our-journey/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-journey/index.html
@@ -11,8 +11,8 @@
         <h2 class="headline-2">How we became the UK leading retailer</h2>
       </div>
       <div class="our-journey-content swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
+        <div class="swiper-wrapper row flex-nowrap flex-xl-wrap">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center milky">
               <h6 class="headline-6">STEP 1 – DIGITAL STRATEGY</h6>
               <svg width="35" height="27" viewBox="0 0 35 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -39,7 +39,7 @@
               <p class="paragraph-1">Vestibulum ut tincidunt augue. Nam rutrum purus nibh, vel rutrum neque fermentum non. Ut ultrices commodo turpis. Mauris convallis ullamcorper.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center milky">
               <h6 class="headline-6">STEP 1 – DIGITAL STRATEGY</h6>
               <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -58,7 +58,7 @@
               <p class="paragraph-1">Ut tincidunt gravida tincidunt. Praesent accumsan elementum aliquet. Ut eget lectus quis dui pulvinar fringilla sit amet id metus. Nulla.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center orange">
               <h6 class="headline-6">STEP 2 – design & build</h6>
               <svg width="35" height="34" viewBox="0 0 35 34" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -82,7 +82,7 @@
               <p class="paragraph-1">Fusce ut ipsum rutrum, dictum dui quis, eleifend libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere. </p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center orange">
               <h6 class="headline-6">STEP 2 – design & build</h6>
               <svg width="35" height="34" viewBox="0 0 35 34" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -106,7 +106,7 @@
               <p class="paragraph-1">Proin vitae eros tortor. Donec hendrerit magna nunc, eget pulvinar lectus maximus rhoncus. Phasellus ex felis, vestibulum vel hendrerit non.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center orange">
               <h6 class="headline-6">STEP 2 – design & build</h6>
               <svg width="35" height="27" viewBox="0 0 35 27" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -133,7 +133,7 @@
               <p class="paragraph-1">Morbi efficitur sem nulla, et bibendum quam ultrices at. Aenean non odio in enim ultricies elementum et id erat.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center green">
               <h6 class="headline-6">STEP 3 – growth marketing</h6>
               <svg width="41" height="26" viewBox="0 0 41 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -145,7 +145,7 @@
               <p class="paragraph-1">Morbi at neque sit amet felis bibendum egestas. Pellentesque semper aliquam nisl, a sollicitudin lectus rhoncus quis. Etiam euismod lacus.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center green">
               <h6 class="headline-6">STEP 3 – growth marketing</h6>
               <svg width="41" height="26" viewBox="0 0 41 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -157,7 +157,7 @@
               <p class="paragraph-1">Curabitur at lorem sed mi accumsan elementum. Pellentesque sed posuere metus. Nunc scelerisque justo nec turpis molestie tempor. Vestibulum sed.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center green">
               <h6 class="headline-6">STEP 3 – growth marketing</h6>
               <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -173,7 +173,7 @@
               <p class="paragraph-1">Converting Cold audiences  Finally, with high intent market covered, we finally in 2020 began to convert ‘cold audiences’ who didnt previously know about ebikes in to customers.</p>
             </div>
           </div>
-          <div class="swiper-slide">
+          <div class="swiper-slide col-xl-4">
             <div class="journey-box center green">
               <h6 class="headline-6">STEP 3 – growth marketing</h6>
               <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
