--- a/themes/zephyr/front-end/src/styles/_general-classes.scss
+++ b/themes/zephyr/front-end/src/styles/_general-classes.scss
@@ -175,6 +175,43 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, form {
     
 }
 
+.swiper-pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .swiper-pagination-bullet{
+        position: relative;
+        width: size(20);
+        height: size(20);
+        z-index: 99;
+        border: 1px solid var(--zephyr-black);
+        border-radius: 50%;
+        flex-grow: 0;
+        flex-shrink: 0;
+        margin: 0 size(5);
+        &:before{
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 56%;
+            height: 56%;
+            background: #6be3a8;
+            border-radius: 50%;
+            transition: opacity 400ms;
+            opacity: 0;
+        }
+        
+        &.swiper-pagination-bullet-active{
+            border: 1px solid #88e8b9;
+            &:before{
+                opacity: 1;
+            }
+        }
+    }
+}
+
 // used
 .headline-1, .wysiwyg-block h1 {
     color: $zephyr-white;
