component-logo done

--- a/themes/zephyr/front-end/src/components/component-logo/index.html
+++ b/themes/zephyr/front-end/src/components/component-logo/index.html
@@ -5,45 +5,45 @@
   
   <section class="component-logo">
     <div class="container">
-      <h1 class="headline-1">…and some more established ones.</h1>
+      <h1 class="headline-1 word-up">…and some more established ones.</h1>
       <div class="row justify-content-start justify-content-xl-between align-items-center">
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-1.png" alt="logo">
           </div>
         </div>
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-2.png" alt="logo">
           </div>
         </div>
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-3.png" alt="logo">
           </div>
         </div>
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-4.png" alt="logo">
           </div>
         </div>
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-5.png" alt="logo">
           </div>
         </div>
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-6.png" alt="logo">
           </div>
         </div>
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-7.png" alt="logo">
           </div>
         </div>
         <div class="col-6 col-md-4 col-xl-3">
-          <div class="image-wrapper">
+          <div class="image-wrapper iv-st-from-bottom">
             <img src="../../html/images/logo-8.png" alt="logo">
           </div>
         </div>
