component-home-swiper not completed yet need to review for bullets issue

--- a/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
+++ b/themes/zephyr/front-end/src/components/component-home-swiper/style.scss
@@ -185,6 +185,7 @@ section.component-home-swiper {
                         top: 0;
                         object-fit: cover;
                         height: 100%;
+                        width: 100%;
                     }
                 }
             }
