component-cards done

--- a/themes/zephyr/front-end/src/components/component-case-studies/index.html
+++ b/themes/zephyr/front-end/src/components/component-case-studies/index.html
@@ -7,10 +7,9 @@
     <div class="container">
       <div class="paragraph-1 word-up desktop-only">CASE STUDIES</div>
       <h1 class="headline-1 real-line-up">We collaborate with exciting new companies…</h1>
-      
-      <div class="row cards">
-        <div class="col-12 card ">
-          <div class="image-wrapper image-wrapper-1">
+      <div class="row">
+        <div class="col-12 bike-image">
+          <div class="image-wrapper" data-reveal-direction="left">
             <img  src="../../html/images/home-image%20.png"  alt="image">
           </div>
           <div class="content">
@@ -18,97 +17,7 @@
             <h4 class="headline-4 real-line-up">Kickstarting the eBike revolution.</h4>
           </div>
         </div>
-        <div class="col-12 col-sm-6 left">
-          <div class="row">
-            <div class="col-12 card">
-              <div class="image-wrapper image-wrapper-2">
-                <img  src="../../html/images/phone-2%20.png" alt="image">
-              </div>
-              <div class="content">
-                <h5 class="headline-5 word-up">Float</h5>
-                <h4 class="headline-4 real-line-up">Democratising financial wellbeing.</h4>
-              </div>
-            </div>
-            <div class="col-12 card">
-              <div class="image-wrapper image-wrapper-3">
-                <img  src="../../html/images/pangaea%20.png" alt="image">
-              </div>
-              <div class="content">
-                <h5 class="headline-5 word-up">Pangaea</h5>
-                <h4 class="headline-4 real-line-up">Uncover a new wave of medical research</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6  right">
-          <div class="row">
-            <div class="col-12 card">
-              <div class="image-wrapper image-wrapper-4">
-                <img  src="../../html/images/meeting%20.png" alt="image">
-              </div>
-              <div class="content">
-                <h5 class="headline-5 word-up">Chartwell</h5>
-                <h4 class="headline-4 real-line-up">Creating a leading international speakers bureau</h4>
-              </div>
-            </div>
-            <div class="col-12 card">
-              <div class="image-wrapper image-wrapper-5">
-                <img  src="../../html/images/phone%20.png" alt="image">
-              </div>
-              <div class="content">
-                <h5 class="headline-5 word-up">Spencer Hart</h5>
-                <h4 class="headline-4 real-line-up">Ultra premium men’s tailoring.</h4>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
-      
-      <!--      <div class="grid-container">-->
-      <!--        <div class="grid-item">-->
-      <!--          <div class="card">-->
-      <!--            <div class="image-wrapper image-wrapper-2">-->
-      <!--              <img src="../../html/images/phone-2%20.png" alt="image">-->
-      <!--            </div>-->
-      <!--            <div class="content">-->
-      <!--              <h5 class="headline-5 word-up">Float</h5>-->
-      <!--              <h4 class="headline-4 real-line-up">Democratising financial wellbeing.</h4>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      <!--          <div class="card">-->
-      <!--            <div class="image-wrapper image-wrapper-2">-->
-      <!--              <img src="../../html/images/phone%20.png" alt="image">-->
-      <!--            </div>-->
-      <!--            <div class="content">-->
-      <!--              <h5 class="headline-5 word-up">Float</h5>-->
-      <!--              <h4 class="headline-4 real-line-up">Democratising financial wellbeing.</h4>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      <!--          <div class="card">-->
-      <!--            <div class="image-wrapper image-wrapper-2">-->
-      <!--              <img src="../../html/images/phone-2%20.png" alt="image">-->
-      <!--            </div>-->
-      <!--            <div class="content">-->
-      <!--              <h5 class="headline-5 word-up">Float</h5>-->
-      <!--              <h4 class="headline-4 real-line-up">Democratising financial wellbeing.</h4>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      
-      <!--        </div>-->
-      <!--        <div class="grid-item item">-->
-      <!--          <div class="card">-->
-      <!--            <div class="image-wrapper image-wrapper-2">-->
-      <!--              <img src="../../html/images/phone-2%20.png" alt="image">-->
-      <!--            </div>-->
-      <!--            <div class="content">-->
-      <!--              <h5 class="headline-5 word-up">Float</h5>-->
-      <!--              <h4 class="headline-4 real-line-up">Democratising financial wellbeing.</h4>-->
-      <!--            </div>-->
-      <!--          </div>-->
-      <!--        </div>-->
-      <!--        -->
-      <!--      </div>-->
-    
     </div>
   </section>
 </div>
