--- a/themes/zephyr/front-end/src/components/component-case-studies/style.scss
+++ b/themes/zephyr/front-end/src/components/component-case-studies/style.scss
@@ -34,130 +34,24 @@ section.component-case-studies {
         
     }
     
-    .cards {
-        .left {
-            margin-top: 0;
-            @include min-small-screen{
-                margin-top: size(50);
+    .bike-image {
+        margin-bottom: size(55);
+        
+        .image-wrapper {
+            position: relative;
+            padding-top: 50.3%;
+            
+            img {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                object-fit: cover;
             }
             
-            .image-wrapper{
-                &.image-wrapper-2 {
-                    padding-top: 110.65%;
-        
-                }
-                &.image-wrapper-3 {
-                    padding-top: 58.5%;
-                }
-            }
         }
-        .right{
-            .image-wrapper{
-                &.image-wrapper-4 {
-                    padding-top: 76%;
-            
-                }
-                &.image-wrapper-5 {
-                    padding-top: 115.65%;
-                }
-            }
-        }
-        .card {
-            margin-bottom: size(55);
-        
-            &:first-child {
-                margin-bottom: size(30);
-                @include min-medium-screen {
-                    margin-bottom: size(70);
-                }
-            }
-        
-        
-        
-            .image-wrapper {
-                position: relative;
-            
-                img {
-                    width: 100%;
-                    height: 100%;
-                    position: absolute;
-                    top: 0;
-                    left: 0;
-                    object-fit: cover;
-                }
-            
-                &.image-wrapper-1 {
-                    padding-top: 50.3%;
-                
-                }
-            
-            }
-        
-            .content {
-                .headline-5 {
-                    @include marginY(size(23), size(4));
-                    @include min-large-screen {
-                        @include marginY(size(18), size(4));
-                    }
-                }
-            }
-        }
-    
     }
-    
-    //.grid-container {
-    //    display: inline-grid;
-    //    grid-template-columns: 50% 50% ;
-    //    grid-column-gap: size(76);
-    //
-    //    .grid-item{
-    //        background: red;
-    //    }
-    //    .card {
-    //
-    //        .image-wrapper {
-    //            position: relative;
-    //
-    //            img {
-    //                width: 100%;
-    //                height: 100%;
-    //                position: absolute;
-    //                top: 0;
-    //                left: 0;
-    //                object-fit: cover;
-    //            }
-    //
-    //            &.image-wrapper-1 {
-    //                padding-top: 50.3%;
-    //
-    //            }
-    //
-    //            &.image-wrapper-2 {
-    //                padding-top: 110.65%;
-    //
-    //            }
-    //
-    //            &.image-wrapper-3 {
-    //                padding-top: 58.5%;
-    //
-    //            }
-    //
-    //            &.image-wrapper-4 {
-    //                padding-top: 115.65%;
-    //
-    //            }
-    //        }
-    //
-    //        .content {
-    //            .headline-5 {
-    //                @include marginY(size(23), size(4));
-    //                @include min-large-screen {
-    //                    @include marginY(size(18), size(4));
-    //                }
-    //            }
-    //        }
-    //    }
-    //}
     
 }
 
