--- a/themes/zephyr/front-end/src/components/component-home-swiper/index.html
+++ b/themes/zephyr/front-end/src/components/component-home-swiper/index.html
@@ -487,7 +487,7 @@
             </div>
           </div>
         </div>
-        <div class="swiper-pagination"></div>
+        <div class="swiper-pagination small-pagination"></div>
       </div>
     </div>
   </section>
