some changes in swipers components

--- a/themes/zephyr/front-end/src/components/component-about-us/index.html
+++ b/themes/zephyr/front-end/src/components/component-about-us/index.html
@@ -14,7 +14,7 @@
           campaigns</p>
       </div>
       <div class="about-us-content swiper-container">
-        <div class="swiper-wrapper row flex-xl-wrap flex-nowrap">
+        <div class="swiper-wrapper row-swiper row">
           <div class="swiper-slide col-xl-4">
             <div class="about-logo">
               <div class="image-wrapper iv-st-from-bottom">
