--- a/themes/zephyr/front-end/src/components/component-increase/index.html
+++ b/themes/zephyr/front-end/src/components/component-increase/index.html
@@ -5,7 +5,7 @@
   <section class="component-increase">
     <div class="container">
       <div class="increase-container swiper-container">
-        <div class="row swiper-wrapper flex-nowrap flex-xl-wrap">
+        <div class="row row-swiper swiper-wrapper">
           <div class="col-xl-4 swiper-slide">
             <div class="increase-content center">
               <h4 class="headline-4 word-up">£3 Million</h4>
