--- a/themes/zephyr/front-end/src/components/component-our-journey/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-journey/index.html
@@ -11,7 +11,7 @@
           <h2 class="headline-2 word-up">How we became the UK leading retailer</h2>
         </div>
         <div class="our-journey-content swiper-container">
-          <div class="swiper-wrapper row flex-nowrap flex-xl-wrap">
+          <div class="swiper-wrapper row row-swiper">
             <div class="swiper-slide col-xl-4">
               <div class="journey-box iv-st-from-bottom center milky">
                 <h6 class="headline-6 word-up">STEP 1 – DIGITAL STRATEGY</h6>
