--- a/themes/zephyr/front-end/src/components/component-cards/index.html
+++ b/themes/zephyr/front-end/src/components/component-cards/index.html
@@ -8,7 +8,7 @@
       <div class="row">
         <div class="col-6 card">
           <div class="image-wrapper">
-            <img src="../../html/images/bike-1.png" data-reveal-direction="left" alt="bike">
+            <img src="../../html/images/bike-1.png" alt="bike">
           </div>
           <p class="paragraph-1 real-line-up desktop-only">
             Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.
@@ -16,7 +16,7 @@
         </div>
         <div class="col-6 card">
           <div class="image-wrapper">
-            <img src="../../html/images/bike-2.png" data-reveal-direction="left" alt="bike">
+            <img src="../../html/images/bike-2.png" alt="bike">
           </div>
           <p class="paragraph-1 real-line-up desktop-only">
             Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Cras mattis consectetur purus sit amet fermentum.
