--- a/themes/zephyr/front-end/src/components/component-cards/style.scss
+++ b/themes/zephyr/front-end/src/components/component-cards/style.scss
@@ -11,9 +11,20 @@ section.component-cards {
     
     .card {
         .image-wrapper {
+            position: relative;
+            height: 0;
+            padding-top: 100.95%;
             margin-bottom: size(15);
             @include min-small-screen {
                 margin-bottom: size(27);
+            }
+            
+            img{
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
             }
         }
         
