--- a/themes/zephyr/front-end/src/components/component-our-testimonials/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-testimonials/index.html
@@ -4,7 +4,55 @@
 <div smooth-scroll-container="">
   <section class="component-our-testimonials">
     <div class="container">
-    
+      <div class="testimonials-wrapper">
+        <div class="circle-shape-1">
+          <img alt="testimonial-shape-1" src="./../../html/images/testimonial-shape-1.png">
+        </div>
+        <div class="circle-shape-2">
+          <img alt="testimonial-shape-2" src="./../../html/images/testimonial-shape-2.png">
+        </div>
+        <div class="testimonials swiper-container">
+          <div class="swiper-wrapper">
+            <div class="testimonial swiper-slide">
+              <div class="testimonials-description">
+                <p class="des-p">‘Zephyr have played a fundamental role in the success of Fully Charged to date. My team are in constant interaction with the zephyr team discussing ongoing marketing
+                  campaigns, optimising our ecommerce store and much more’
+                </p>
+              </div>
+              <div class="image-content center">
+                <img alt="testimonial-image" src="./../../html/images/testimonial-image.png">
+                <h4 class="name">Ben Jaconelli</h4>
+                <h5 class="job-title">CEO of Fully Charged</h5>
+              </div>
+            </div>
+            <div class="testimonial swiper-slide">
+              <div class="testimonials-description">
+                <p class="des-p">‘Zephyr have played a fundamental role in the success of Fully Charged to date. My team are in constant interaction with the zephyr team discussing ongoing marketing
+                  campaigns, optimising our ecommerce store and much more’
+                </p>
+              </div>
+              <div class="image-content center">
+                <img alt="testimonial-image" src="./../../html/images/testimonial-image.png">
+                <h4 class="name">Ben Jaconelli</h4>
+                <h5 class="job-title">CEO of Fully Charged</h5>
+              </div>
+            </div>
+            <div class="testimonial swiper-slide">
+              <div class="testimonials-description">
+                <p class="des-p">‘Zephyr have played a fundamental role in the success of Fully Charged to date. My team are in constant interaction with the zephyr team discussing ongoing marketing
+                  campaigns, optimising our ecommerce store and much more’
+                </p>
+              </div>
+              <div class="image-content center">
+                <img alt="testimonial-image" src="./../../html/images/testimonial-image.png">
+                <h4 class="name">Ben Jaconelli</h4>
+                <h5 class="job-title">CEO of Fully Charged</h5>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination small-pagination"></div>
+        </div>
+      </div>
     </div>
   </section>
 </div>
