--- a/themes/zephyr/front-end/src/components/component-our-testimonials/index.html
+++ b/themes/zephyr/front-end/src/components/component-our-testimonials/index.html
@@ -27,26 +27,26 @@
             </div>
             <div class="testimonial swiper-slide">
               <div class="testimonials-description">
-                <p class="des-p">‘Zephyr have played a fundamental role in the success of Fully Charged to date. My team are in constant interaction with the zephyr team discussing ongoing marketing
+                <p class="des-p real-line-up">‘Zephyr have played a fundamental role in the success of Fully Charged to date. My team are in constant interaction with the zephyr team discussing ongoing marketing
                   campaigns, optimising our ecommerce store and much more’
                 </p>
               </div>
               <div class="image-content center">
-                <img alt="testimonial-image" src="./../../html/images/testimonial-image.png">
-                <h4 class="name">Ben Jaconelli</h4>
-                <h5 class="job-title">CEO of Fully Charged</h5>
+                <img class="iv-st-from-bottom" alt="testimonial-image" src="./../../html/images/testimonial-image.png">
+                <h4 class="name word-up">Ben Jaconelli</h4>
+                <h5 class="job-title word-up">CEO of Fully Charged</h5>
               </div>
             </div>
             <div class="testimonial swiper-slide">
               <div class="testimonials-description">
-                <p class="des-p">‘Zephyr have played a fundamental role in the success of Fully Charged to date. My team are in constant interaction with the zephyr team discussing ongoing marketing
+                <p class="des-p real-line-up">‘Zephyr have played a fundamental role in the success of Fully Charged to date. My team are in constant interaction with the zephyr team discussing ongoing marketing
                   campaigns, optimising our ecommerce store and much more’
                 </p>
               </div>
               <div class="image-content center">
-                <img alt="testimonial-image" src="./../../html/images/testimonial-image.png">
-                <h4 class="name">Ben Jaconelli</h4>
-                <h5 class="job-title">CEO of Fully Charged</h5>
+                <img class="iv-st-from-bottom" alt="testimonial-image" src="./../../html/images/testimonial-image.png">
+                <h4 class="name word-up">Ben Jaconelli</h4>
+                <h5 class="job-title word-up">CEO of Fully Charged</h5>
               </div>
             </div>
           </div>
