component-our-testimonials done isa

--- a/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
+++ b/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
@@ -1,6 +1,6 @@
 
 .sector-expertise2-page-wrapper {
-    section.component-hero {
+    .component-hero {
         .content {
             .headline-1 {
                 
@@ -11,10 +11,8 @@
                 }
             }
         }
-        
         .down {
             display: none;
         }
     }
-    
 }
