--- a/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
+++ b/themes/zephyr/front-end/src/styles/pages/_sector-expertise2.scss
@@ -1,5 +1,6 @@
 
 .sector-expertise2-page-wrapper {
+    display: none;
     section.component-hero {
         .content {
             .headline-1 {
